# orca-whirlpools

./: Anchor.toml  CLAUDE.md  DEMO_SCRIPT.md  README.md  TRANSFER_HOOK_SOLUTION_README.md  test-bounty-implementation.js
frontend/: next.config.js  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: Header.tsx  Hero.tsx  PoolCreator.tsx  RegistryDashboard.tsx  TokenCreator.tsx  TradingInterface.tsx  WalletProvider.tsx
frontend/app/components/ui/: Tabs.tsx
frontend/app/lib/: registry-client.ts  token-operations.ts  wallet-mock.ts  whirlpool-client.ts
programs/transfer-hook-registry/: Cargo.toml  package.json
programs/transfer-hook-registry/src/: errors.rs  events.rs  lib.rs
programs/transfer-hook-registry/src/instructions/: assess_hook_risk.rs  auto_approve_token_badge.rs  cast_governance_vote.rs  finalize_hook_approval.rs  initialize_registry.rs  mod.rs  submit_hook_for_approval.rs  update_hook_status.rs
programs/transfer-hook-registry/src/state/: governance_vote.rs  hook_submission.rs  mod.rs  registry_config.rs  risk_assessment.rs
programs/transfer-hook-registry/src/utils/: mod.rs  program_analysis.rs
programs/transfer-hook-royalty/: Cargo.toml
programs/transfer-hook-royalty/src/: lib.rs
