[package]
name = "transfer-hook-royalty"
version = "0.1.0"
description = "Simple royalty collection Transfer Hook for Token-2022"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook_royalty"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["token", "token_2022"] }
spl-token = "4.0.1"
spl-token-2022 = { version = "1.0.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.4.1"
spl-tlv-account-resolution = "0.5.2"

[package.metadata.anchor]
anchor-version = "0.29.0"